Footer font & colors & align fix

--- a/components/footer/copy/style.css
+++ b/components/footer/copy/style.css
@@ -1,3 +1,6 @@
+@value colors: 'ui/colors.css';
+@value footerCopyText from colors;
+
 .copy {
     padding: 4vh 3vw;
     display: flex;
@@ -8,10 +11,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    background: #6A7286; /* Grey 3 */
+    color: footerCopyText;
 }
 .copyrights {
     width: 350px;
