--- a/components/footer/style.css
+++ b/components/footer/style.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: baseline;
 }
 .logo {
     width: 75px;
